remove unused code